fixed overflow problem

--- a/scss/_resets.scss
+++ b/scss/_resets.scss
@@ -26,7 +26,7 @@ body {
 		padding: 200px;
 		background-color: $box-shadow;
 		border-radius: 50%;
-		z-index: -9999;
+		z-index: -99999;
 	}
 }
 
