--- a/scss/style.scss
+++ b/scss/style.scss
@@ -323,13 +323,14 @@
 	overflow-y: hidden;
 	z-index: -999;
 	position: relative;
+	background-color: $secondary-color;
 	& h1 {
 		font-size: 3rem;
 		font-weight: 300;
 		margin: 2rem;
 		text-transform: uppercase;
 		letter-spacing: 15px;
-		color: $secondary-color;
+		color: $primary-color;
 	}
 	& .mySkills {
 		display: flex;
@@ -507,14 +508,14 @@
 	margin-left: 2vw;
 	position: relative;
 	text-align: center;
-	color: $secondary-color;
+	color: $primary-color;
+	background-color: $secondary-color;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	overflow: hidden;
-	overflow-y: hidden;
-	overflow-x: hidden;
+	// z-index: -9999;
 	& h1 {
 		margin-top: 2rem;
 		font-weight: 300;
@@ -541,6 +542,7 @@
 		z-index: 99;
 		color: $secondary-color;
 		max-width: 45vw;
+		// overflow: hidden;
 		&.formHover {
 			border-radius: 0;
 			transform: scale(1.025);
